Add mouse on tmux

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,3 +1,5 @@
+set -g mouse on
+
 # Dracula Theme: https://draculatheme.com/tmux
 set -g @dracula-show-powerline true
 # it can accept `session`, `smiley`, `window`, or any character.
