--- a/i3status/config
+++ b/i3status/config
@@ -20,7 +20,7 @@ order += "wireless _first_"
 order += "ethernet _first_"
 order += "battery all"
 order += "disk /"
-order += "load"
+order += "cpu_usage"
 order += "memory"
 order += "tztime local"
 
@@ -42,16 +42,16 @@ disk "/" {
         format = "%avail"
 }
 
-load {
-        format = "%1min"
-}
+cpu_usage {
+        format = "%usage"
+  }
 
 memory {
-        format = "%used | %available"
+        format = "%used"
         threshold_degraded = "1G"
         format_degraded = "MEMORY < %available"
 }
 
 tztime local {
-        format = "%Y-%m-%d %H:%M:%S"
+        format = "%Y-%m-%d %H:%M"
 }
