--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,7 +5,7 @@ set -g @dracula-show-powerline true
 # it can accept `session`, `smiley`, `window`, or any character.
 set -g @dracula-show-left-icon window
 # available plugins: battery, cpu-usage, git, gpu-usage, ram-usage, network, network-bandwidth, network-ping, weather, time
-set -g @dracula-plugins "cpu-usage ram-usage time"
+set -g @dracula-plugins false
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
