--- a/i3status/config
+++ b/i3status/config
@@ -8,50 +8,46 @@
 
 general {
 	output_format = "i3bar"
-        colors = true
-        interval = 5
-	color_good = "#50FA7B"
-	color_degraded = "#F1FA8C"
-	color_bad = "#FF5555"
+    colors = false
+    interval = 5
 }
 
-#order += "ipv6"
+order += "disk /"
+order += "memory"
+order += "cpu_usage"
 order += "wireless _first_"
 order += "ethernet _first_"
 order += "battery all"
-order += "disk /"
-order += "cpu_usage"
-order += "memory"
 order += "tztime local"
 
 wireless _first_ {
-        format_up = "W: (%quality at %essid) %ip"
-        format_down = "W: down"
+   format_up = "%quality %essid"
+   format_down = ""
 }
 
 ethernet _first_ {
-        format_up = "E: %ip (%speed)"
-        format_down = "E: down"
+    format_up = "%speed eth"
+    format_down = ""
 }
 
 battery all {
-        format = "%status %percentage %remaining"
+    format = "%status %percentage"
 }
 
 disk "/" {
-        format = "%avail"
+    format = "%used"
 }
 
 cpu_usage {
-        format = "%usage"
-  }
+    format = "%usage"
+}
 
 memory {
-        format = "%used"
-        threshold_degraded = "1G"
-        format_degraded = "MEMORY < %available"
+    format = "%used"
+    threshold_degraded = "10%"
+    format_degraded = "%used"
 }
 
 tztime local {
-        format = "%Y-%m-%d %H:%M"
+    format = "%Y-%m-%d %H:%M"
 }
