--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
-packer_compiled.lua
-tmux/plugins/
+# Folder view configuration files
+.DS_Store
+Desktop.ini
 
+# Thumbnail cache files
+._*
+Thumbs.db
+
+# Files that might appear on external disks
+.Spotlight-V100
+.Trashes
+
+# fish variables
+fish_variables
