--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,1 +1,8 @@
-../yadm/alt/.config/alacritty/alacritty.toml##os.Linux
+import = ["~/.config/alacritty/catppuccin/catppuccin-mocha.toml"]
+
+[font]
+size = 10.0
+
+[font.normal]
+family = "Hack Nerd Font Mono"
+style = "Regular"
