--- a/.config/yadm/alt/.config/i3##os.Linux/config
+++ b/.config/yadm/alt/.config/i3##os.Linux/config
@@ -148,7 +148,7 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 # Remove window decorations
-default_border none
+default_border pixel
 # class                 border  bground text    indicator child_border
 client.focused          #6272A4 #6272A4 #F8F8F2 #6272A4   #6272A4
 client.focused_inactive #44475A #44475A #F8F8F2 #44475A   #44475A
@@ -162,11 +162,11 @@ client.background       #F8F8F2
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-  status_command i3status
+  status_command i3status-rs ~/.config/i3status-rust/config.toml 
   colors {
+    separator  #44475A
     background #282A36
     statusline #F8F8F2
-    separator  #44475A
 
     focused_workspace  #44475A #44475A #F8F8F2
     active_workspace   #282A36 #44475A #F8F8F2
